test/corpus/class.txt
===
Class. Note after Invariant
===
note
  demo_note: True
  multi_note: True, False
class DEMO_CLASS
invariant
  note
    note_after_invariant: True
end
---
(source_file
  (class_declaration
    notes: (notes
      (note_entry
        (tag)
        (note_values
          (note_item (boolean_constant))))
      (note_entry
        (tag)
        (note_values
          (note_item (boolean_constant))
          (note_item (boolean_constant)))))
    (class_name)
    (invariant)
    (notes
      (note_entry
        (tag)
        (note_values (note_item (boolean_constant)))))))

===
Class. End Note without Invariant
===
class A
note
end
---
(source_file
  (class_declaration (class_name)
    (notes)))

===
Mark
===
deferred class DEMO end
---
(source_file
  (class_declaration
    mark: (header_mark)
    (class_name)))

===
Obsolete
===
class A
  obsolete "msg"
end
---
(source_file
  (class_declaration (class_name)
    (obsolete (basic_manifest_string (string_content)))))

===
Class invariant
===
class A
invariant
  True
  tagged: -- Tagged comment
end
---
(source_file
  (class_declaration (class_name)
    (invariant
      (assertion_clause
        (unlabeled_assertion_clause
          (expression (boolean_constant))))
      (assertion_clause
        (tag_mark (tag))
        (unlabeled_assertion_clause (comment))))))

===
Class. Formal generics
===
class A [frozen X, K -> {P, Q} create make, construct end, T -> S rename a as b end]
end
---
(source_file
  (class_declaration (class_name)
    (formal_generics
      (formal_generic (class_name))
      (formal_generic
        (class_name)
        (constraint
          (constraining_types
            (multiple_constraint
              (single_constraint (class_type (class_name)))
              (single_constraint (class_type (class_name)))))
          (constraint_creators (identifier) (identifier))))
      (formal_generic
        (class_name)
        (constraint
          (constraining_types
            (single_constraint
              (class_type (class_name))
              (rename
                (rename_pair
                  (identifier)
                  (extended_feature_name (identifier)))))))))))

===
Class. Inherit
===
class A
inherit {NONE}
  X Y Z

inherit
  W
    undefine a
    redefine c
    rename e as f
    export
      {ANY}
        -- Header comment
        all
    select g
    end
end
---
(source_file
  (class_declaration (class_name)
    (inheritance
      (non_conformance)
      (parent (class_type (class_name)))
      (parent (class_type (class_name)))
      (parent (class_type (class_name))))
    (inheritance
      (parent
        (class_type (class_name))
        (feature_adaptation
          (undefine (identifier))
          (redefine (identifier))
          (rename (rename_pair (identifier) (extended_feature_name (identifier))))
          (new_exports
            (new_export_item
              (clients (class_name))
              (header_comment)
              (export_all)))
          (select (identifier)))))))

===
Class. Create
===
class A
create {NONE} a
create b
end
---
(source_file
  (class_declaration (class_name)
    (creation_clause (clients (class_name)) (identifier))
    (creation_clause (identifier))))

===
Class. Converters
===
class A
convert
  a ({X, Y}),
  b: {G, H}
end
---
(source_file
  (class_declaration (class_name)
    (converters
      (converter
        (conversion_procedure
          (identifier)
          (class_type (class_name))
          (class_type (class_name))))
      (converter
        (conversion_query
          (identifier)
          (class_type (class_name))
          (class_type (class_name)))))))
