test/corpus/comment_spaces.txt
===
Header comment with spaces before
===
class A
feature      
  -- There MUST be spaces at the end of line above
end
---
(source_file
  (class_declaration
    (class_name)
    (feature_clause
      (header_comment))))
